# hstry

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  justfile  opencode.json  package.json  session.md
.github/workflows/: ci.yml  release.yml
.pi/todos/: 019dbbf9-2b2e-774b-8d10-049f3f6eff00.json  4aeec0f7-0365-4627-9ebb-b2507b428143.json  4b35b06e-6545-4826-84b9-fd9f2a9e6bce.json  694554d3-fab3-4968-8a8d-a5c685afad68.json  987c50ff-63b5-4508-aa79-8ecad720532e.json  a69b6f71-de71-4c75-9068-81180b338309.json  e160452e-d40c-4e14-939e-6f9da0180e24.json  e7a60142-4216-4896-b45b-01c72e4da533.json  eb329a28-4163-492a-a570-d7c6f67b650d.json
.trx/: ISSUES.md  events.jsonl  issues.jsonl
.trx/crdt/: trx-01fn.automerge  trx-0jah.automerge  trx-0r08.automerge  trx-1qkv.automerge  trx-273f.automerge  trx-2bmw.automerge  trx-2wpe.automerge  trx-36t2.automerge  trx-4h8s.automerge  trx-4w8c.automerge  trx-4x3e.automerge  trx-526a.automerge  trx-5fqx.automerge  trx-5mf1.automerge  trx-5ph6.automerge  trx-6124.automerge  trx-6cj8.automerge  trx-6yb5.automerge  trx-702h.automerge  trx-70as.automerge  trx-7fh3.automerge  trx-7ghs.automerge  trx-857e.automerge  trx-8av2.automerge  trx-8em1.automerge  trx-8g87.automerge  trx-aa3m.automerge  trx-bb8t.automerge  trx-bj82.automerge  trx-bw1g.automerge  trx-bwvy.automerge  trx-c077.automerge  trx-ca4j.automerge  trx-cbkm.automerge  trx-cmew.automerge  trx-ctd3.automerge  trx-czh4.automerge  trx-dy7w.automerge  trx-dyty.automerge  trx-ekqp.automerge  (+61 more)
adapters/: .hstry-adapters.json
adapters/aider/: adapter.ts
adapters/chatgpt/: adapter.ts
adapters/chatgpt-teams/: adapter.ts
adapters/claude-code/: adapter.ts
adapters/claude-cowork/: adapter.ts
adapters/claude-web/: adapter.ts
adapters/codex/: adapter.ts
adapters/cursor/: adapter.ts
adapters/gemini/: adapter.ts
adapters/goose/: adapter.ts
adapters/hermes/: adapter.ts
adapters/jan/: adapter.ts
adapters/lmstudio/: adapter.ts
adapters/opencode/: adapter.ts
adapters/openwebui/: adapter.ts
adapters/pi/: adapter.ts
adapters/types/: first-message.ts  index.ts
crates/hstry-api/: Cargo.toml
crates/hstry-api/src/: main.rs
crates/hstry-cli/: Cargo.toml
crates/hstry-cli/assets/: web-package.json  web-runner.ts
crates/hstry-cli/src/: adapter_manifest.rs  main.rs  pretty.rs  service.rs  sync.rs
crates/hstry-core/: Cargo.toml  build.rs
crates/hstry-core/data/: word_lists.toml
crates/hstry-core/migrations/: 001_initial_schema.sql  002_add_provider_column.sql  003_add_provider_index.sql  004_add_events_and_snapshots.sql  005_add_conversation_summary_cache.sql  006_add_sender_and_provider_to_messages.sql  007_add_harness_column.sql  008_add_client_id_to_messages.sql  009_performance_indexes.sql  010_add_platform_id.sql  011_add_version_and_message_count.sql  012_add_conversation_tree.sql  013_indexer_outbox_and_events_retention.sql  README.md
crates/hstry-core/proto/: hstry_service.proto
crates/hstry-core/src/: config.rs  config_tests.rs  db.rs  error.rs  ingest.rs  lib.rs  models.rs  models_tests.rs  parsed.rs  parts.rs  paths.rs  peek.rs  readable_id.rs  remote.rs  schema.rs  search_tantivy.rs  service.rs  source_registry.rs
crates/hstry-core/tests/: db_operations.rs  incremental_sync.rs  persistence.rs  source_remove.rs  version_monotonic.rs
crates/hstry-mcp/: Cargo.toml
crates/hstry-mcp/src/: main.rs
crates/hstry-runtime/: Cargo.toml
crates/hstry-runtime/src/: lib.rs  runner.rs  runner_tests.rs
crates/hstry-runtime/tests/: adapter_export.rs
crates/hstry-tui/: Cargo.toml
crates/hstry-tui/src/: main.rs
docs/: RELEASE.md  logbook-architecture-decision.md  logbook-architecture-final-decision.md  logbook-code-blocks-decision.md  logbook-decisions-code-blocks.md  logbook-extraction-design.md  logbook-implementation-summary.md  logbook-incremental-loop.md  logbook-json-schema.md  logbook-pi-agent-loop.md  logbook-quickstart.md  logbook-structure-summary.md  logbook-summary.md  logbook-timeline-design.md  windows-support-handoff.md
docs/examples/: logbook-timeline-example.json  logbook-timeline-example.txt  logbook-timeline-minimal.txt
docs/schemas/: logbook-timeline-v1.json  logbook-timeline.types.ts  logbook-v1.json  logbook.types.ts
examples/: config.schema.json  config.toml
extension/: background.js  manifest.json  options.html  options.js  popup.html  popup.js  styles.css  ui.js
extension/lib/: common.js
extension/providers/: chatgpt.js  claude.js  gemini.js  index.js  perplexity.js
extension/test/: backoff.js  new-providers.js  run.js  ui.js
history/: session.md
packaging/: README.md  setup-all.sh  setup-aur.sh
scripts/: eval-mmry-recall.sh  new-cli.sh  run-overnight-eval.sh  test-mmry-session-ingest.sh  update-adapters.ps1
scripts/lint/: rust-ai-guardrails.sh
testdata/: test-adapters.sh  test-config.toml
testdata/aider/: .aider.chat.history.md
testdata/chatgpt/: conversations.json
testdata/chatgpt-teams/: history_20250101_120000.json
testdata/claude-code/: test-session.jsonl
testdata/claude-web/: claude-conversations.json
testdata/codex/: test-session-rollout.jsonl
testdata/cursor/workspace_test/: state.vscdb
testdata/gemini/: gemini-conversations.json
testdata/goose/: test-session.jsonl
testdata/hermes/: session_test_session.json
testdata/jan/threads/thread_test_1/: messages.jsonl  thread.json
testdata/lmstudio/: test-conversation.json
testdata/opencode/project/test-project/storage/session/info/: ses_test001.json
testdata/opencode/project/test-project/storage/session/message/ses_test001/: msg_001.json  msg_002.json
testdata/opencode/project/test-project/storage/session/part/ses_test001/msg_001/: prt_001.json
testdata/opencode/project/test-project/storage/session/part/ses_test001/msg_002/: prt_002.json
testdata/openwebui/: webui.db
testdata/pi/: test-session.jsonl
