[workspace]
resolver = "2"
members = [
  "crates/hstry-core",
  "crates/hstry-runtime",
  "crates/hstry-cli",
  "crates/hstry-tui",
  "crates/hstry-mcp",
  "crates/hstry-api",
]

[workspace.package]
version = "0.5.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/byteowlz/hstry"

[workspace.dependencies]
# Shared across workspace
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = { version = "0.15", features = ["toml"] }
dirs = "6.0"
shellexpand = "3.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tantivy = "0.25"
tonic = "0.14"
prost = "0.14"
tonic-prost = "0.14"
tonic-build = "0.14"
tonic-prost-build = "0.14"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Utils
tempfile = "3.14"
which = "8.0"
nix = { version = "0.31", features = ["signal", "process"] }
temp-env = "0.3"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

# TUI
ratatui = "0.30"
crossterm = "0.29"
pulldown-cmark = "0.13"

# Async runtime
tokio = { version = "1.43", features = ["full"] }
tokio-stream = "0.1"

# API/HTTP
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper-util = { version = "0.1", features = ["tokio"] }
reqwest = { version = "0.13", features = ["json", "query"] }
log = "0.4"
env_logger = "0.11"

# MCP
rmcp = { version = "0.14", features = ["server", "transport-io"] }

# Internal crates
hstry-core = { path = "crates/hstry-core" }
hstry-runtime = { path = "crates/hstry-runtime" }

# ============================================
# STANDARD PRESET - rust-magic-linter
# ============================================
# The viral tweet config enhanced with async safety
# Recommended for most projects
#
# Based on @notnotstorm's tweet + OpenAgentsInc additions

[workspace.lints.clippy]
# Enable pedantic group for comprehensive checks
pedantic = { level = "warn", priority = -1 }

# === THE GUARDRAILS (Critical for AI Agents) ===
# Panic safety - agents must handle errors, not crash
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
panic_in_result_fn = "deny"

# The "no cheating" rule
allow_attributes = "deny"

# Code hygiene - no debug leftovers
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
print_stdout = "warn"
print_stderr = "warn"

# === ASYNC SAFETY ===
await_holding_lock = "deny" # Prevents deadlocks

# === PROCESS SAFETY ===
exit = "deny" # Libraries shouldn't exit

# === PEDANTIC RELAXATIONS ===
# These are too noisy for most projects
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
similar_names = "allow"
too_many_lines = "allow"


[workspace.lints.rust]
unsafe_code = "forbid"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
