[workspace]
resolver = "2"
members = [
  "crates/hstry-core",
  "crates/hstry-runtime",
  "crates/hstry-cli",
  "crates/hstry-tui",
  "crates/hstry-mcp",
  "crates/hstry-api",
]

[workspace.package]
version = "0.5.12"
edition = "2024"
license = "MIT"
repository = "https://github.com/byteowlz/hstry"

[workspace.dependencies]
# Shared across workspace
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = { version = "0.15", features = ["toml"] }
dirs = "6.0"
shellexpand = "3.1"
dateparser = "0.2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tantivy = "0.25"
tonic = "0.14"
prost = "0.14"
tonic-prost = "0.14"
tonic-build = "0.14"
tonic-prost-build = "0.14"

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }

# Utils
tempfile = "3.14"
which = "8.0"
futures = "0.3"
nix = { version = "0.31", features = ["signal", "process"] }
temp-env = "0.3"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

# TUI
ratatui = "0.30"
crossterm = "0.29"
pulldown-cmark = "0.13"

# Async runtime
tokio = { version = "1.43", features = ["full"] }
tokio-stream = "0.1"

# API/HTTP
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper-util = { version = "0.1", features = ["tokio"] }
reqwest = { version = "0.13", features = ["json", "query"] }
log = "0.4"
env_logger = "0.11"

# MCP
rmcp = { version = "0.14", features = ["server", "transport-io"] }

# Internal crates
hstry-core = { path = "crates/hstry-core" }
hstry-runtime = { path = "crates/hstry-runtime" }

# ============================================
# STANDARD PRESET - rust-magic-linter
# ============================================
# The viral tweet config enhanced with async safety
# Recommended for most projects
#
# Based on @notnotstorm's tweet + OpenAgentsInc additions

[workspace.lints.clippy]
# Oqto parity: style and correctness
collapsible_if = "warn"
collapsible_else_if = "warn"
needless_return = "warn"
needless_borrow = "warn"
clone_on_copy = "warn"
single_char_add_str = "warn"
manual_strip = "warn"
manual_flatten = "warn"
unnecessary_lazy_evaluations = "warn"
unnecessary_map_or = "warn"
io_other_error = "warn"
single_match = "warn"

# Performance
cloned_instead_of_copied = "warn"
inefficient_to_string = "warn"

# Pedantic subset used in Oqto
ptr_arg = "warn"
derivable_impls = "warn"

# Intentionally allowed (Oqto parity)
too_many_arguments = "allow"
type_complexity = "allow"
module_inception = "allow"

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
