[package]
name = "hstry-api"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
hstry-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum.workspace = true
clap.workspace = true
tower-http.workspace = true
log.workspace = true
env_logger.workspace = true
