[package]
name = "hstry-cli"
version.workspace = true
edition.workspace = true
description = "CLI for hstry - Universal AI chat history"

[[bin]]
name = "hstry"
path = "src/main.rs"

[dependencies]
hstry-core.workspace = true
hstry-runtime.workspace = true
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
uuid.workspace = true
