[package]
name = "hstry-cli"
version.workspace = true
edition.workspace = true
description = "CLI for hstry - Universal AI chat history"

[lints]
workspace = true


[[bin]]
name = "hstry"
path = "src/main.rs"

[dependencies]
hstry-core.workspace = true
hstry-runtime.workspace = true
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
chrono.workspace = true
uuid.workspace = true
dirs.workspace = true
which.workspace = true
reqwest.workspace = true
notify = "6.1"
walkdir = "2.5"
libc = "0.2"

[dev-dependencies]
tempfile = "3.10"
