[package]
name = "hstry-core"
version.workspace = true
edition.workspace = true
description = "Core library for hstry - Universal AI chat history database"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
config.workspace = true
dirs.workspace = true
shellexpand.workspace = true
chrono.workspace = true
uuid.workspace = true
sqlx.workspace = true
tokio.workspace = true
