[package]
name = "hstry-runtime"
version.workspace = true
edition.workspace = true
description = "TypeScript adapter runtime for hstry"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
hstry-core.workspace = true

[dev-dependencies]
tempfile.workspace = true
